# enterprise_doc_mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  zbpack.json
.claude/skills/index-enterprise-documents/: SKILL.md
.claude/skills/parse-enterprise-documents/: SKILL.md
mcp_server/: _search.py  server.py
plan/: plan.md  plan_review.md  progress.md  runtime_control.json  task.txt
plan/phases/: phase-00.md  phase-01.md  phase-02.md  phase-03.md  phase-04.md  phase-05.md  phase-06.md  phase-07.md  phase-08.md  phase-09.md  phase-10.md  phase-11.md  phase-12.md  phase-13.md  phase-14.md  phase-15.md  phase-16.md  phase-17.md  phase-18.md
scripts/: ingest.py  notebooklm_ppt_agent.py  notebooklm_ppt_mcp_agent.py  start_server.py
skills/chunk_and_index/: _embed.py  _rerank.py  _store.py  index.py
skills/parse_documents/: _pdf.py  _pptx.py  _render.py  _table.py  _text.py  _vision.py  parse.py
task3_notebooklm_agent/: __init__.py  agent.py  auth.py  config.py  mcp_agent.py  source_bundle.py
tests/: eval_retriever.py  test_claude_skills.py  test_eval_retriever.py  test_index_store.py  test_ingest.py  test_mcp_server.py  test_notebooklm_ppt_agent.py  test_parse_documents.py  test_render.py  test_text_table.py  test_vision.py
tests/artifacts/: notebooklm-upload-manifest.json
tests/artifacts/task3-notebooklm-run/: notebooklm-ppt-agent-result.json  notebooklm-slide-deck-prompt.txt  page-2026-05-08T18-48-58-391Z.yml  page-2026-05-08T18-49-12-898Z.yml  (+6 more)
tests/screenshots/: notebooklm-ppt-generation-started.yml
(+3 files in other folders)
