[project]
name = "enterprisedocmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.98.1",
    "chromadb>=1.5.9",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "llama-index-core>=0.14.21",
    "mcp[cli]>=1.27.0",
    "openai>=2.34.0",
    "pillow>=12.2.0",
    "playwright>=1.44.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "sentence-transformers>=2.2.2",
]

[dependency-groups]
eval = [
    "ragas>=0.4.3",
]
